style: updated readme #36

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -204,6 +204,7 @@ header {
     overflow-y: auto;
     height: 0;
     font-size: 12px;
+    padding: 2px 0;
 
     .stream-line {
       display: flex;
