--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -257,15 +257,75 @@ footer {
   }
 
   .sponsors-list {
+    width: 530px;
+    margin: 0 auto;
+    overflow: hidden;
     margin-top: 50px;
 
     img {
       transform: scale(0.5);
+      float: left;
+      margin-right: 20px;
+    }
+
+    a {
+      width: 100px;
+      display: block;
+      float: left;
+      background: #e9e9e9;
+      font-weight: 300;
+      font-size: 13px;
+      line-height: 18px;
+      margin-right: 50px; 
+    }
+    a:nth-child(2) {
+      padding: 37px 0 28px 0;
+      border-radius: 75px;
+    }
+    a:nth-child(3) {
+      padding: 37px 0 28px 0;
+    }
+    a:nth-child(4) {
+      padding: 13px 0 10px;
+      position: relative;
+      margin-top: 25px;
+      margin-right: 0;
+    }
+    a:nth-child(4):before { 
+      content: "";
+      position: absolute;
+      top: -25px;
+      left: 0;
+      width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-bottom: 25px solid #e9e9e9;
+    }
+    a:nth-child(4):after {  
+      content: "";
+      position: absolute;
+      bottom: -25px;
+      left: 0;
+      width: 0;
+      height: 0;
+      border-left: 50px solid transparent;
+      border-right: 50px solid transparent;
+      border-top: 25px solid #e9e9e9;
     }
   }
 
   h3 {
     color: #7B7B7B;
-    margin-top: 50px;
+    margin-top: 10px;
+    width: 600px;
+    line-height: 39px;
+    margin: 0 auto;
+  }
+
+  .bottom {
+    border-top: solid 1px #e9e9e9;
+    margin-top: 40px;
+    padding-top: 50px;
   }
 }
