feat: using ellipsis for long names
#27

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -30,7 +30,7 @@ angular
         })
 
         function onMouseMove(e) {
-          var width = Math.min(600, Math.max(minWidth, e.clientX + handlerWidth))
+          var width = Math.min(600, Math.max(minWidth, e.clientX))
           $element.css('width', width)
         }
       }
