closes #68 added support for multiple spaces

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -242,7 +242,7 @@ header {
       }
 
       .stream-line-content {
-        white-space: nowrap;
+        white-space: pre;
       }
 
       .stream-line-timestamp,
