--- a/app/scss/_theme.scss
+++ b/app/scss/_theme.scss
@@ -37,7 +37,7 @@
         color: $stream-list-title-color;
       }
 
-      li {
+      a {
         color: $stream-list-color;
 
         &:hover {
