closes #75 added key binding for resume

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -11,7 +11,8 @@ angular
     'angularMoment',
     'LocalForageModule',
     'rt.popup',
-    'ui.router'
+    'ui.router',
+    'cfp.hotkeys'
   ])
   .config(function ($stateProvider) {
     $stateProvider.state('streams', {
