added top menu navigation

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -21,7 +21,17 @@
 </head>
 <body>
 
+  <a name="header"></a>
   <header>
+    <div class="menu">
+      <a class="nav-logo" href="#header"></a>
+      <a href="#demo">Live Demo</a>
+      <a href="https://github.com/kilianc/rtail">Github</a>
+      <a href="#contributors">Contributors</a>
+      <a href="#sponsors">Sponsors</a>
+      <a class="hosted" href="https://rtail.lukibear.com">Hosted Solution</a>
+    </div>
+
     <div class="rtail-logo"></div>
 
     <h1>
@@ -31,6 +41,7 @@
     </h1>
     <h3><%= tagline %></h3>
 
+    <a name="demo"></a>
     <div class="browser">
       <iframe src="https://rtail-demo.lukibear.com/#/streams/rtail.org"></iframe>
     </div>
@@ -70,6 +81,7 @@
     <a class="btn" href="https://github.com/kilianc/rtail">github.com/kilianc/rtail</a>
   </div>
 
+  <a name="contributors"></a>
   <div class="contributors">
     <h2>Contributors</h2>
     <h3>From the community to the community</h3>
@@ -100,6 +112,7 @@
     </table>
   </div>
 
+  <a name="sponsors"></a>
   <footer>
     <h2>Sponsors</h2>
     <h3>❤ rTail? Sponsor this project to keep it actively maintained and free.</h3>
