fixed small case on github label

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -26,7 +26,7 @@
     <div class="menu">
       <a class="nav-logo" href="#header"></a>
       <a href="#demo">Live Demo</a>
-      <a href="https://github.com/kilianc/rtail">Github</a>
+      <a href="https://github.com/kilianc/rtail">GitHub</a>
       <a href="#contributors">Contributors</a>
       <a href="#sponsors">Sponsors</a>
       <a class="hosted" href="https://rtail.lukibear.com">Hosted Solution</a>
